feat: add manga browsing and reader support